Bug 166181 - Cell group error working with tables inside writer
Summary: Cell group error working with tables inside writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium minor
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.2.6 target:25...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-04-14 15:12 UTC by Ivan Moliterni Moya
Modified: 2025-07-14 18:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Writer document with tables (42.19 KB, application/vnd.oasis.opendocument.text)
2025-04-14 15:13 UTC, Ivan Moliterni Moya
Details
PDF print of the document with tables broken (40.93 KB, application/pdf)
2025-04-14 15:14 UTC, Ivan Moliterni Moya
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Moliterni Moya 2025-04-14 15:12:02 UTC
Description:
A table with several rows and columns, and with grouped cells into single one, makes writer to draw lines outside de table, making the column more large in one column (with grouped cells) than in the others.
It dont happens in older version, only with the new LibreOffice 25.2.2 i installed recently.

Steps to Reproduce:
1.When a table is broken in to two pages, and the column has to be drawn in both
2.
3.

Actual Results:
There is no set of instrucction. You only need a large table, with many rows so i can be drawn in a single page, and has several "grouped" cells into one in one of the columms (in my case always in the firs column). When de table is draw in others pages, something seems to be wrong a there apears more lines than needed, like bounds where outside de rectangular limits

Expected Results:
As described.


Reproducible: Always


User Profile Reset: No

Additional Info:
Draw the table correct.
Comment 1 Ivan Moliterni Moya 2025-04-14 15:13:28 UTC
Created attachment 200340 [details]
Writer document with tables
Comment 2 Ivan Moliterni Moya 2025-04-14 15:14:01 UTC
Created attachment 200341 [details]
PDF print of the document with tables broken
Comment 3 Ivan Moliterni Moya 2025-04-14 15:15:05 UTC
It happens in this new version, not in others, and breaks all the tables that needs several pages to be shown in the document
Comment 4 Alan B. 2025-05-12 05:46:39 UTC
Hello Ivan,

Thank you for reporting the bug. I can confirm that the bug is present in master.

Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9bc5b89c149497a83117edfadc3fb0b96d2f9899
CPU threads: 16; OS: Windows 10 X86_64 (build 19045); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Comment 5 Saburo 2025-05-13 08:39:30 UTC
Bisected with linux-64-25.2
author	Mike Kaganski <mike.kaganski@collabora.com>
commit 223a51801f0b75ae5036a8bcecc6eb81d99b113e

Optimize rows height calculation a bit
Instead of adding heights in a loop, just get the distance between
the top of the first row and the bottom of the last.

Change-Id: I2082026c1c525f8230393ee8b59d1019f321fae5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/173596
Comment 6 Mike Kaganski 2025-07-13 18:19:52 UTC
https://gerrit.libreoffice.org/c/core/+/187818
Comment 7 Commit Notification 2025-07-14 09:41:04 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6a074bd78322d8a8ca3eddd5ea4d4edf8f796a80

tdf#166181: partial revert of 223a51801f0b75ae5036a8bcecc6eb81d99b113e

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2025-07-14 16:24:10 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/69e193a802b2e17be78e35d8cfc8fc0050f3349e

tdf#166181: partial revert of 223a51801f0b75ae5036a8bcecc6eb81d99b113e

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Commit Notification 2025-07-14 18:16:37 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/51d91b68ed1d6b3b5ba22913005cd1a9d3a635c1

tdf#166181: partial revert of 223a51801f0b75ae5036a8bcecc6eb81d99b113e

It will be available in 25.8.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.