tdf#166181: partial revert of 223a51801f0b75ae5036a8bcecc6eb81d99b113e

A newly created follow row frame for a split row would be passed into
lcl_GetHeightOfRows with Y position of 0, while the next row frames
would have Y positions from their previous placement (below the last
row frame kept on the previous page). Thus we can't use a difference
between top ot first row and bottom of last row to get sum of heights.

Change-Id: Ia96cd3ec488a6c3e6fb768fb1346bc8d61696118
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187818
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 6a074bd78322d8a8ca3eddd5ea4d4edf8f796a80)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187857
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>